Bug 214147 - Normal indenter doesn't copy whitespace from the above line correctly.
Summary: Normal indenter doesn't copy whitespace from the above line correctly.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: indentation (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 153324 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-11 19:06 UTC by Bernhard Beschow
Modified: 2010-02-18 03:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2009-11-11 19:06:40 UTC
Version:           Unbekannt (using 4.3.3 (KDE 4.3.3), Chakra KDE)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31-ARCH

When tabs are enabled, the normal indenter replaces spaces by tabs when copying leading whitespace from the above line. The expected behavior would be to always make an exact copy of whitespace from the line above, regardless wheter tabs are enabled.
Comment 1 Bernhard Beschow 2009-11-15 18:51:26 UTC
SVN commit 1049708 by beschow:

Always use leading whitespace of previous line in normal indentation mode.

BUG:214147
REVIEW:2138

 M  +8 -0      document/katetextline.cpp  
 M  +2 -0      document/katetextline.h  
 M  +16 -3     utils/kateautoindent.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1049708
Comment 2 Bernhard Beschow 2009-11-15 18:56:47 UTC
SVN commit 1049711 by beschow:

backport SVN commit 1049708 to KDE 4.3 branch:
Always use leading whitespace of previous line in normal indentation mode.

BUG:214147
REVIEW:2138

 M  +8 -0      document/katetextline.cpp  
 M  +2 -0      document/katetextline.h  
 M  +16 -3     utils/kateautoindent.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1049711
Comment 3 Kevin Kofler 2010-02-18 03:52:36 UTC
*** Bug 153324 has been marked as a duplicate of this bug. ***