Always use leading whitespace of previous line in normal indentation mode.

BUG:214147
REVIEW:2138

svn path=/trunk/KDE/kdelibs/kate/; revision=1049708